--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>sell</title>
+    <title>sell-WebApp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="static/css/reset.css"
+    <link rel="stylesheet" type="text/css" href="static/css/reset.css">
   </head>
   <body>
       <div id="app"></div>
